network_policies/np-busybox.yml
kind: Pod
apiVersion: v1
metadata:
  name: np-busybox
  namespace: netpolicy-test
  labels:
    app: client
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command: ['sh', '-c', 'while true; do sleep 5; done']
