network_policies/my-networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-networkpolicy
  namespace: netpolicy-test
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            team: np-test
      ports:
        - protocol: TCP
          port: 80
